Fixed coming soon message on mobile

--- a/site/styles/content_mobile.less
+++ b/site/styles/content_mobile.less
@@ -24,13 +24,14 @@ section.home {
 
 	> h1 {
 		position: absolute;
-		top: 20%;
-		left: 22vw;
+		top: 35%;
+		right: 50%;
+		transform: translateX(50%);
 		background-color: #dbd7c8;
 		padding: 1rem 1rem;
 		color: #756f5b;
 		font-size: 2rem;
-		width: 50vw;
+		width: 60vw;
 		text-align: center;
 	}
 
